# mde

./: .gitignore  CHANGELOG.md  CLAUDE.md  EXAMPLE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-linux.yml  build-windows-installer.yml  build-windows.yml  release.yml
docs/: plugin-api-versioning.md  plugins.md
docs/plugins-examples/: README.md
docs/plugins-examples/em_dash_to_hyphen/: em_dash_to_hyphen.py
docs/plugins-examples/stamp/: stamp.py
docs/plugins-examples/wordcount/: wordcount.py  wordcount.toml
examples/: DIAGRAMS.md  EXAMPLE.md  LINKS.md  LOGSEQ_EXAMPLE.md  SYNTAX_HIGHLIGHTING.md
packaging/: build-windows-native.sh  build-windows.sh  build.sh  make-installer-windows.sh  mde_launch.py  pysidedeploy.spec  pysidedeploy.windows.spec  run-wine.sh
packaging/windows/: installer.nsi
scripts/: check_python_files.py
src/fun/markdown/: __init__.py  enhanced_editor.py  markdown_editor.py  settings.py  settings_dialog.py  syntax_highlighter.py
src/fun/markdown6/: README.md  __init__.py  activity_bar.py  command_palette.py  enhanced_editor.py  export_service.py  graph_export.py  graphviz_service.py  markdown_editor.py  markdown_editor_cli.py  markdown_extensions.py  mermaid_service.py  outline_panel.py  project_manager.py  references_panel.py  search_panel.py  searchable_popup.py  settings.py  settings_dialog.py  sidebar.py  snippets.py  syntax_highlighter.py  table_editor.py  theme.py  tool_paths.py
src/markdown_editor/markdown6/: DEVELOPMENT.md  README.md  __init__.py  actions.py  activity_bar.py  app_context.py  asset_cache.py  command_palette.py  diagram_helpers.py  enhanced_editor.py  export_service.py  file_tree_widget.py  find_replace_bar.py  graph_export.py  graph_exporter.py  graphviz_service.py  html_renderer_core.py  link_detection.py  logger.py  markdown_editor.py  markdown_editor_cli.py  markdown_extensions.py  mermaid_service.py  notifications.py  outline_panel.py  preview_scheme.py  project_manager.py  references_panel.py  search_panel.py  searchable_popup.py  settings.py  settings_dialog.py  sidebar.py  snippets.py  syntax_highlighter.py  table_editor.py  temp_files.py  theme.py  tool_paths.py  viewer_export.py
src/markdown_editor/plugins/: __init__.py
tests/: conftest.py  test_editor_close_nonblocking.py
tests/markdown6/: __init__.py  conftest.py  test_app_context.py  test_async_diagram.py  test_autosave.py  test_callouts.py  test_code_block_copy_button.py  test_command_palette.py  test_diagram_copy_button.py  test_diagram_injection_queue.py  test_diagram_rendering.py  test_dirty_flag_tracking.py  test_dot_path_resolution.py  test_enhanced_editor.py  test_export_service.py  test_export_sync_diagram_resolution.py  test_export_unification.py  test_external_change_bar.py  test_external_stderr_capture.py  test_fenced_code_highlighter.py  test_fenced_code_highlighter_api.py  test_fenced_code_qt_integration.py  test_file_browser_sort_proxy.py  test_file_tree_widget.py  test_find_replace_bar.py  test_graph_export.py  test_graph_exporter.py  test_help_about.py  test_hidden_files.py  test_html_tag_completion.py  test_log_level_resolution.py  test_logseq.py  test_mark_extension.py  test_markdown_editor_cli.py  test_markdown_rendering.py  test_notification_bell.py  test_notifications.py  test_outline_panel.py  test_plugin_action_atomicity.py  test_plugin_configure_dialog.py  (+64 more)
tests/markdown6/invariance/: abbreviation_body.html  abbreviation_full.html  abbreviation_simple.html  blockquote_nested_body.html  blockquote_nested_full.html  blockquote_nested_simple.html  breakless_list_body.html  breakless_list_full.html  breakless_list_simple.html  callouts_admonition_body.html  callouts_admonition_full.html  callouts_admonition_simple.html  callouts_github_body.html  callouts_github_full.html  callouts_github_simple.html  code_plain_body.html  code_plain_full.html  code_plain_simple.html  code_python_body.html  code_python_full.html  code_python_simple.html  code_shell_body.html  code_shell_full.html  code_shell_simple.html  definition_list_body.html  definition_list_full.html  definition_list_simple.html  example_md_body.html  example_md_full.html  example_md_simple.html  footnote_body.html  footnote_full.html  footnote_simple.html  (+40 more)
(+66 files in other folders)
