[project]
name = "markdown-editor"
dynamic = ["version"]
description = "A feature-rich Qt6 Markdown editor with live preview (PySide6)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "email-validator",
    "PySide6>=6.5",
    "PySide6-Addons>=6.5",  # Includes QtWebEngine for proper HTML rendering
    "markdown>=3.5",
    "Pygments>=2.0",
    "weasyprint>=60.0",  # PDF export (fallback when pandoc unavailable)
    "python-docx>=1.0",  # DOCX export (fallback when pandoc unavailable)
    "graphviz>=0.20",    # Graphviz diagram rendering
    "argcomplete>=3.0",  # Shell tab-completion
]

[project.optional-dependencies]
# Note: For best PDF quality (especially with LaTeX), install pandoc:
# On Ubuntu/Debian: sudo apt install pandoc texlive-xetex
# On macOS: brew install pandoc
# On Windows: choco install pandoc
# If pandoc is not installed, the editor will use weasyprint/python-docx as fallback
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
]
# Build tooling for producing standalone binaries via `pyside6-deploy`.
# pyside6-deploy itself ships with PySide6 (already a core dep). Nuitka and
# patchelf are what pyside6-deploy pip-installs on its first run - listing
# them here makes `pip install -e ".[build]"` a complete one-shot setup.
# patchelf is Linux-only (it modifies ELF binaries), so it's guarded.
build = [
    "nuitka>=2.5",
    'patchelf>=0.17; sys_platform == "linux"',
]

[project.scripts]
markdown-editor = "markdown_editor.markdown6:main"
mde = "markdown_editor.markdown6.markdown_editor_cli:main"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"markdown_editor.markdown6" = ["icons/*.png", "icons/*.ico", "icons/*.desktop"]
"markdown_editor.markdown6.builtin_plugins" = ["*/*.py", "*/*.toml", "*/*.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.1.0"

[tool.isort]
# Vertical hanging indent with trailing comma for multi-line imports:
#     from module import (
#         x,
#         y,
#         z,
#     )
# Rationale: one-symbol-per-line diffs minimally when an import is
# added or removed, and the trailing comma keeps the last line's diff
# clean too.
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
